welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  for(i<- 0 to len(nums)-1){
    if (tab(i)==lookingFor){return i}
    else{return -1}
  }
}